# SOFACE-assignment-10

./: .gitignore  CMakeLists.txt  README.md  notes.md  run_coverage.sh
docs/: sum_thresholded_graph.drawio
include/: snippets.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_snippets.cpp
